# coding-agent

./: .gitignore
agent-dev/: INSTALL.md  README.md  check_structure.py  pyproject.toml  requirements.txt  run_agent.py  run_ai_agent.py  scrivi_codice.py  setup_ollama.py
agent-dev/examples/: example_run.py  ollama_example_run.py
agent-dev/prompts/: __init__.py  discovery_prompts.json  ollama_specific_prompts.json
agent-dev/src/: __init__.py  agent.py  ai_agent.py
agent-dev/src/analyst/: __init__.py  agent.py  ai_prd_generator.py  prd_generator.py
agent-dev/src/builder/: __init__.py  agent.py
agent-dev/src/config/: __init__.py  prompts.py  settings.py
agent-dev/src/discovery/: __init__.py  agent.py  phases.py  smart_agent.py  validator.py
agent-dev/src/educator/: __init__.py  agent.py
agent-dev/src/file_manager/: __init__.py  diff_utils.py  handler.py
agent-dev/src/reviewer/: __init__.py  agent.py
agent-dev/src/state/: __init__.py
agent-dev/src/tasks/: __init__.py  ai_decomposer.py  manager.py  models.py  state_machine.py
agent-dev/src/utils/: __init__.py  llm.py  logger.py  safety.py  validation.py
