[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "software-dev-agent"
version = "1.0.0"
description = "AI-powered software development agent for iterative codebase development"
authors = [{name = "AI Architect"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.12.0",
    "anthropic>=0.18.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    "tenacity>=8.2.0",
    "sqlmodel>=0.0.14",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "black>=23.0.0", "isort>=5.12.0", "mypy>=1.7.0"]

[tool.setuptools.packages.find]
where = ["src"]